Minor, use a spacer instead of top margin to prevent margin collapse.

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -31,8 +31,14 @@
   top: 0;
 }
 
-.device-desktop .phabricator-standard-page-body {
-  margin-top: 44px;
+.phabricator-main-menu-spacer {
+  display: none;
+}
+
+.device-desktop .phabricator-main-menu-spacer {
+  height: 44px;
+  position: relative;
+  display: block;
 }
 
 
